[package]
name = "rain2d"
version = "0.2.2"
license = "MIT"
authors = ["Finn Vos <finnvos34@protonmail.ch>"]
description = "Simple 2D game engine"
keywords = ["game", "engine", "2D"]
categories = ["game-engines", "graphics"]
homepage = "https://github.com/fiinnnn/rain2d"
repository = "https://github.com/fiinnnn/rain2d"
readme = "README.md"
edition = "2018"

[dependencies]
minifb = "0.19.3"
nalgebra-glm = "0.5.0"
bresenham = "0.1.1"
