[package]
name = "rain2d"
version = "1.0.0"
license = "MIT"
authors = ["Finn Vos <finn@fvos.de>"]
description = "Simple 2D game engine"
keywords = ["game", "engine", "2D"]
categories = ["game-engines", "graphics"]
homepage = "https://github.com/fiinnnn/rain2d"
repository = "https://github.com/fiinnnn/rain2d"
readme = "README.md"
edition = "2018"

[dependencies]
minifb = "^0.22"
bresenham = "0.1.1"
